--- a/Лицензия.md
+++ b/Лицензия.md
@@ -1,9 +1,13 @@
+[manifest]: https://github.com/profalp/manifest/blob/master/%D0%9C%D0%B0%D0%BD%D0%B8%D1%84%D0%B5%D1%81%D1%82%20%D0%BF%D1%80%D0%BE%D1%84%D0%B5%D1%81%D1%81%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%BE%D0%B3%D0%BE%20%D1%81%D0%BE%D1%8E%D0%B7%D0%B0%20%D0%BF%D1%80%D0%BE%D0%BC%D1%8B%D1%88%D0%BB%D0%B5%D0%BD%D0%BD%D1%8B%D1%85%20%D0%B0%D0%BB%D1%8C%D0%BF%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D0%BE%D0%B2%20%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%BE%D0%B9%20%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D1%86%D0%B8%D0%B8.md
+
 [full]: http://creativecommons.org/licenses/by-sa/4.0/legalcode
 
 # Лицензия
 
-Манифест профессионального союза промышленных альпинистов Российской Федерации
-опубликован под лицензией «**Creative Commons Attribution-ShareAlike 4.0 International Public License**». Это упрощённая формулировка содержания данной лицензии. Юридическую силу имеет её [полный вариант][full] на английском языке.
+[Манифест Центального профессионального союза промышленных альпинистов Российской Федерации][manifest]
+опубликован под лицензией «**Creative Commons Attribution-ShareAlike 4.0
+International Public License**». Это упрощённая формулировка содержания данной
+лицензии. Юридическую силу имеет её [полный вариант][full] на английском языке.
 >### Вы можете свободно:
 - **Делиться (обмениваться)** — копировать и распространять материал на любом
 носителе и в любом формате
